--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -35,7 +35,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-gravity 50
+// gravity 50.0
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
