--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -10,7 +10,6 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -22,7 +21,7 @@
 // cloudscrollx 0.01
 // cloudscrolly -0.05
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,9 +34,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-gravity 75.0
-impulsemod 60
-impulsespeed 30
+// gravity 100.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -58,7 +57,7 @@ impulsespeed 30
 // maptitle "Smouldering by Kurt Kessler"
 // mmshadows 1
 // mmskylight 1
-movespeed 40
+// movespeed 40.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
