--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1320,6 +1320,16 @@ texture n "acord/wall9n.jpg" 1 0 0 0.5
 texture s "acord/wall9s.jpg" 1 0 0 0.5
 texture z "acord/wall9z.jpg" 1 0 0 0.5
 
+texture 0 "acord/floor6.jpg" 0 0 0 0.5
+texture n "acord/floor6n.jpg" 0 0 0 0.5
+texture s "acord/floor6s.jpg" 0 0 0 0.5
+texture z "acord/floor6z.jpg" 0 0 0 0.5
+
+texture 0 "acord/floor7.jpg" 0 0 0 0.5
+texture n "acord/floor7n.jpg" 0 0 0 0.5
+texture s "acord/floor7s.jpg" 0 0 0 0.5
+texture z "acord/floor7z.jpg" 0 0 0 0.5
+
 setshader stdworld
 
 texture 0 "acord/brick1.jpg"
