--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -28,17 +28,17 @@
 // floatfric 5.0
 // floorfric 5.0
 // floorz 0.867
-// fog 200
+// fog 240
 // fogcolour 0x000000
 // grassanimmillis 3000
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 100.0
+// gravity 75.0
 // impulsemod 60.0
-// impulsespeed 15.0
+// impulsespeed 20.0
 // impulsetime 0
-// jumpspeed 50.0
+// jumpspeed 40.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
 // lavafog 50
@@ -49,9 +49,8 @@
 // lighterror 8
 // lightlod 0
 // lightprecision 36
-// liquiddampen 0.5
 // liquidfric 10.0
-// liquidscale 0.9
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Hollow by Jonathan 'W!CK3D'"
