--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -322,3 +322,10 @@ playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
 
 // some aliases
 fov = [ if (= (inthirdperson) 1) [ thirdpersonfov $arg1 ] [ firstpersonfov $arg1 ] ] // people have complained /fov was removed
+
+// sauer rotation aliases
+alias octamaps [
+	mainmaps "complex douze ot academy metl2 metl3 nmp8 refuge tartech kalking1 dock turbine fanatic_quake oddworld wake5 aard3c curvedm fragplaza pgdm kffa neondevastation hog2 memento neonpanic lostinspace DM_BS1 shindou sdm1 shinmei1 stemple powerplant phosgene oasis island metl4 ruby frozen ksauer1 killfactory corruption deathtek aqueducts orbe roughinery shadowed torment moonlite darkdeath orion nmp10 katrez_d thor frostbyte ogrosupply kmap5 thetowers guacamole tejen hades paradigm mechanic wdcd"
+	ctfmaps "hallo reissen flagstone face-capture shipwreck dust2 urban_c berlin_wall akroseum valhalla damnation mach2 redemption tejen europium capture_night l_ctf forge campo wdcd sacrifice core_transfer recovery"
+	stfmaps "urban_c nevil_c fb_capture nmp9 c_valley lostinspace fc3 face-capture nmp4 nmp8 hallo monastery ph-capture hades fc4 relic frostbyte venice paradigm corruption asteroids ogrosupply reissen akroseum duomo capture_night c_egypt tejen dust2 campo killcore3 damnation arabic cwcastle river_c serenity"
+]
